deploy/ack/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ego
  labels:
    app.kubernetes.io/managed-by: ego-deploy
